policies/hostpid.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-hostpid
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        !has(object.spec.hostPID) || object.spec.hostPID == false
      message: >
        Using hostPID is disallowed. spec.hostPID must be undefined or set to false.
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-hostpid-namespace-optout-warn
spec:
  policyName: check-hostpid
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["baseline", "restricted"]
        - key: validating-admission-policies.kolteq.com/hostpid
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-hostpid-namespace-optin-warn
spec:
  policyName: check-hostpid
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: hostpid.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-hostpid-namespace-optout-audit
spec:
  policyName: check-hostpid
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["baseline", "restricted"]
        - key: validating-admission-policies.kolteq.com/hostpid
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-hostpid-namespace-optin-audit
spec:
  policyName: check-hostpid
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: hostpid.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-hostpid-namespace-optout-deny
spec:
  policyName: check-hostpid
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["baseline", "restricted"]
        - key: validating-admission-policies.kolteq.com/hostpid
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-hostpid-namespace-optin-deny
spec:
  policyName: check-hostpid
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: hostpid.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
